--- a/.gitignore
+++ b/.gitignore
@@ -590,3 +590,4 @@ obj/
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,dotnetcore
+.vs/EVStation-basedRentalSystem/DesignTimeBuild/.dtbcache.v2
