--- a/.gitignore
+++ b/.gitignore
@@ -591,3 +591,4 @@ obj/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,dotnetcore
 .vs/EVStation-basedRentalSystem/DesignTimeBuild/.dtbcache.v2
+.vs/EVStation-basedRentalSystem/FileContentIndex/12a32eec-27be-40e8-8b94-0e8c0e5ecdb3.vsidx
