--- a/.gitignore
+++ b/.gitignore
@@ -596,3 +596,5 @@ obj/
 /.vs/EVStation-basedRentalSystem/FileContentIndex
 /.vs/EVStation-basedRentalSystem/DesignTimeBuild
 
+appsettings*.json
+!appsettings.json
