--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -12,5 +12,11 @@
 
   "Jwt": {
     "Key": "jHxgdsojxlcsdhiozHXacjasbdxbchsdShXCGXsdxc"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "famsojt2024@gmail.com",
+    "Password": "qzyw kfbg ujrh uqni"
   }
 }
