--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -18,5 +18,16 @@
     "Port": 587,
     "Username": "famsojt2024@gmail.com",
     "Password": "qzyw kfbg ujrh uqni"
-  }
+  },
+  "Vnpay": {
+    "TmnCode": "0KM1AAKV",
+    "HashSecret": "3DQ3SSYVEVV15MEM6E8J2TV5CIFCW696",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "http://localhost:5172/Checkout/PaymentCallbackVnpay"
+  },
+  "TimeZoneId": "SE Asia Standard Time"
 }
