tích hợp AI ( Beta Version)

--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -29,5 +29,12 @@
     "Locale": "vn",
     "PaymentBackReturnUrl": "http://localhost:5172/Checkout/PaymentCallbackVnpay"
   },
-  "TimeZoneId": "SE Asia Standard Time"
+  "TimeZoneId": "SE Asia Standard Time",
+  "Gemini": {
+    "ApiKey": "AIzaSyBls6rTvX65uYqBwMq41S8AfSdTr8d07pk",
+    "Model": "gemini-1.5-flash-latest"
+  }
+
+
+
 }
