--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -32,7 +32,7 @@
   "TimeZoneId": "SE Asia Standard Time",
   "Gemini": {
     "ApiKey": "AIzaSyACN6hCZoN_tctemdDEGZg7tXOmSRgQIdw",
-   
+    "Model": "gemini-2.5-flash"
   }
 
 
