--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -27,14 +27,12 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:5172/Checkout/PaymentCallbackVnpay"
+    "PaymentBackReturnUrl": "http://localhost:7200/Checkout/PaymentCallbackVnpay",
+    "IpnUrl": "https://localhost:7200/api/payment/vnpay-ipn"
   },
   "TimeZoneId": "SE Asia Standard Time",
   "Gemini": {
     "ApiKey": "AIzaSyACN6hCZoN_tctemdDEGZg7tXOmSRgQIdw",
     "Model": "gemini-2.5-flash"
   }
-
-
-
 }
