update thanh toán momo

--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -33,6 +33,14 @@
   "Gemini": {
     "ApiKey": "AIzaSyACN6hCZoN_tctemdDEGZg7tXOmSRgQIdw",
     "Model": "gemini-2.5-flash"
+  },
+  "MomoSettings": {
+    "PartnerCode": "MOMOR3MB20251110",
+    "AccessKey": "sFQetFVpeZqUfgT2",
+    "SecretKey": "N9ip8rhpNLf2KyuDp31ABga5WUWyaR9p",
+    "Endpoint": "https://payment.momo.vn/v2/gateway/api/create",
+    "RedirectUrl": "https://localhost:3000/payment-success",
+    "IpnUrl": "https://localhost:7200/api/payment/MomoIPN"
   }
 
 
