--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -39,7 +39,7 @@
     "AccessKey": "sFQetFVpeZqUfgT2",
     "SecretKey": "N9ip8rhpNLf2KyuDp31ABga5WUWyaR9p",
     "Endpoint": "https://payment.momo.vn/v2/gateway/api/create",
-    "RedirectUrl": "https://localhost:3000/payment-success",
+    "RedirectUrl": "http://localhost:3000/payment-success",
     "IpnUrl": "https://localhost:7200/api/payment/MomoIPN"
   }
 
