--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -27,8 +27,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:7200/Checkout/PaymentCallbackVnpay",
-    "IpnUrl": "https://localhost:7200/api/payment/vnpay-ipn"
+    "PaymentBackReturnUrl": "http://localhost:5172/Checkout/PaymentCallbackVnpay"
   },
   "TimeZoneId": "SE Asia Standard Time",
   "Gemini": {
@@ -51,4 +50,7 @@
     "RedirectUrl": "http://localhost:3000/payment-success",
     "IpnUrl": "https://6192b5f3fdae.ngrok-free.app/api/payment/PayOSIPN"
   }
+
+
+
 }
