--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -30,6 +30,14 @@
     "PaymentBackReturnUrl": "http://localhost:3000/checkout/payment-callback-vnpay",
     "IpnUrl": "https://localhost:7200/api/payment/vnpay-ipn"
   },
+  "MomoSettings": {
+    "PartnerCode": "MOMOR3MB20251110",
+    "AccessKey": "sFQetFVpeZqUfgT2",
+    "SecretKey": "N9ip8rhpNLf2KyuDp31ABga5WUWyaR9p",
+    "Endpoint": "https://payment.momo.vn/v2/gateway/api/create",
+    "ReturnUrl": "http://localhost:3000/checkout/payment-callback-momo",
+    "IpnUrl": "https://localhost:7200/api/payment/momo-ipn"
+  },
   "TimeZoneId": "SE Asia Standard Time",
   "Gemini": {
     "ApiKey": "AIzaSyACN6hCZoN_tctemdDEGZg7tXOmSRgQIdw",
