add order with momo

--- a/EVStation-basedRentalSystem/appsettings.json
+++ b/EVStation-basedRentalSystem/appsettings.json
@@ -28,8 +28,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:3000/checkout/payment-callback-vnpay",
-    "IpnUrl": "https://localhost:7200/api/payment/vnpay-ipn"
+    "PaymentBackReturnUrl": "http://localhost:3000/checkout/payment-callback-vnpay"
   },
   "MomoSettings": {
     "PartnerCode": "MOMOR3MB20251110",
